fixes unbound template

--- a/templates/unbound.conf.j2
+++ b/templates/unbound.conf.j2
@@ -1,19 +1,17 @@
 server:
-  {% if unbound_interfaces is defined %}
-  {% for interface in unbound_interfaces  %}
+{% if unbound_interfaces is defined %}
+{% for interface in unbound_interfaces %}
   interface: {{ interface }}
-  {% endfor %}
-  {% endif %}
-
-  {% if unbound_acl is defined %}
-  {% for acl in unbound_acl  %}
+{% endfor %}
+{% endif %}
+{% if unbound_acl is defined %}
+{% for acl in unbound_acl %}
   access-control: {{ acl }}
-  {% endfor %}
-  {% endif %}
-
-  {% if unbound_ipv6 is defined %}
+{% endfor %}
+{% endif %}
+{% if unbound_ipv6 is defined %}
   do-ip6: {{ unbound_ipv6 }}
-  {% endif %}
+{% endif %}
 
   root-hints: "{{ unbound_root_hints }}"
 
@@ -21,79 +19,79 @@ server:
   #include: "/var/unbound/etc/adblocks.conf"
 
   #TLS (DoT)
-  {% if nsd_use_tls is defined %}
+{% if nsd_use_tls is defined %}
   tls-service-key: "/etc/ssl/private/{{ unbound_use_tls }}.key"
   tls-service-pem: "/etc/ssl/{{ unbound_use_tls }}.fullchain.pem"
-  {% if nsd_use_tls is defined %}
+{% if nsd_use_tls is defined %}
   tls-port: {{ unbound_tls_port }}
-  {% endif %}
-  {% endif %}
+{% endif %}
+{% endif %}
   #do-udp: no
   #udp-upstream-without-downstream: yes
 
-  {% if unbound_local_zones is defined %}
-  {% for zone in unbound_local_zones  %}
+{% if unbound_local_zones is defined %}
+{% for zone in unbound_local_zones  %}
   local-zone: "{{ zone.name }}" {{ zone.option }}
   domain-insecure: "{{ zone.name }}"
-  {% endfor %}
-  {% endif %}
+{% endfor %}
+{% endif %}
 
   #security
-  {% if unbound_do_not_query_localhost is defined %}
+{% if unbound_do_not_query_localhost is defined %}
   do-not-query-localhost: {{ unbound_do_not_query_localhost }}
-  {% endif %}
-  {% if unbound_trust_anchor_file is defined %}
+{% endif %}
+{% if unbound_trust_anchor_file is defined %}
   auto-trust-anchor-file: "{{ unbound_trust_anchor_file }}"
-  {% if unbound_hide_identity }
+{% endif %}
+{% if unbound_hide_identity is defined %}
   hide-identity: {{ unbound_hide_identity }}
-  {% endif %}
-  {% if unbound_hide_version is defined %}
+{% endif %}
+{% if unbound_hide_version is defined %}
   hide-version: {{ unbound_hide_version }}
-  {% endif %}
-  {% if unbound_use_caps_for_id is defined %}
+{% endif %}
+{% if unbound_use_caps_for_id is defined %}
   use-caps-for-id: {{ unbound_use_caps_for_id }}
-  {% endif %}
-  {% if unbound_harden_glue is defined %}
+{% endif %}
+{% if unbound_harden_glue is defined %}
   harden-glue: {{ unbound_harden_glue }}
-  {% endif %}
-  {% if unbound_deny_any is defined %}
+{% endif %}
+{% if unbound_deny_any is defined %}
   deny-any: {{ unbound_deny_any }}
-  {% endif %}
-  {% if unbound_qname_minimisation is defined %}
+{% endif %}
+{% if unbound_qname_minimisation is defined %}
   qname-minimisation: {{ unbound_qname_minimisation }}
-  {% endif %}
-  {% if unbound_harden_dnssec_stripped is defined %}
+{% endif %}
+{% if unbound_harden_dnssec_stripped is defined %}
   harden-dnssec-stripped: {{ unbound_harden_dnssec_stripped }}
-  {% endif %}
-  {% endif %}
-  {% if unbound_aggressive_nsec is defined %}
-  aggressive-nsec: "{{ unbound_aggressive_nsec }}"
-  {% endif %}
+{% endif %}
+{% if unbound_aggressive_nsec is defined %}
+  aggressive-nsec: {{ unbound_aggressive_nsec }}
+{% endif %}
 
   #ratelimiting: 1000 queries per second total, 100 per ip -> 10 hosts
   incoming-num-tcp: 1000
   ratelimit: 1000
   ip-ratelimit: 100
 
-  {% if unbound_log_queries is defined %}
-  log-queries: "{{ unbound_log_queries }}"
-  {% endif %}
-  {% if unbound_log_replies is defined %}
-  log-replies: "{{ unbound_log_replies }}"
-  {% endif %}
+{% if unbound_log_queries is defined %}
+  log-queries: {{ unbound_log_queries }}
+{% endif %}
+{% if unbound_log_replies is defined %}
+  log-replies: {{ unbound_log_replies }}
+{% endif %}
 
-  {% if unbound_remote_control is defined %}
+{% if unbound_remote_control is defined %}
   remote-control:
     control-enable: {{ unbound_remote_control }}
     control-use-cert: no
     control-interface: /var/run/unbound.sock
-  {% endif %}
+{% endif %}
 
 {% if unbound_stub_zones is defined %}
 {% for zone in unbound_stub_zones %}
 stub-zone:
   name: "{{ zone.name }}"
-  stub-addr: {{ zone.stub-address }}
+  stub-addr: {{ zone.stub_address }}
 {% endfor %}
 {% endif %}
 
@@ -101,12 +99,12 @@ stub-zone:
 {% for zone in unbound_forward_zones %}
 forward-zone:
   name: "{{ zone.name }}"
-  forward-first: {{ zone.forward-first }}
-  {% if zone.forward-addresses is defined %}
-  {% set addresses = zone.forward-addresses.split(',') %}
-  {% for address in addresses %}
+  forward-first: {{ zone.forward_first }}
+{% if zone.forward_addresses is defined %}
+{% set addresses = zone.forward_addresses.split(',') %}
+{% for address in addresses %}
   forward-addr: {{ address }}
-  {% endfor %}
-  {% endif %}
+{% endfor %}
+{% endif %}
 {% endfor %}
 {% endif %}
