--- a/templates/unbound.conf.j2
+++ b/templates/unbound.conf.j2
@@ -15,6 +15,10 @@ server:
 
   root-hints: "{{ unbound_root_hints }}"
 
+{% if unbound_validate_dnssec is defined %}
+  auto-trust-anchor-file: "{{ unbound_auto_trust_anchor_file }}"
+{% endif %}
+
 {% if unbound_use_adblocks is defined %}
 {% if unbound_use_adblocks is sameas true %}
   include: "/var/unbound/etc/adblocks.conf"
